<resources>
    <string name="app_name">soullive</string>
    <string name="title_home">홈</string>
    <string name="title_fitness">적합도 분석</string>
    <string name="title_bookmark">북마크</string>
    <string name="title_mypage">마이페이지</string>
    <string name="iv_logo">화면의 상단 로고</string>
    <string name="iv_search">검색 아이콘</string>
    <string name="iv_setting">설정 아이콘</string>
    <string name="iv_arrow_right">오른쪽 화살표</string>
    <string name="iv_bg_grey800_4dp">grey400 색상의 배경</string>
    <string name="iv_bg_grey500">grey500색상의 배경</string>
    <string name="iv_bg_grey800">grey800색상의 배경</string>
    <string name="iv_bg_grey700">grey700색상의 배경</string>
    <string name="iv_bg_purple400">purple400색상의 배경</string>
    <string name="confirm">확인</string>
    <string name="모델_정하기_고민_끝">모델 정하기 고민 끝.</string>
    <string name="에_오신_것을">에 오신 것을</string>
    <string name="환영합니다">환영합니다!</string>
    <string name="삼초_가입으로_적합한_모델을_만나보세요">3초 가입으로 적합한 모델을 만나보세요.</string>
    <string name="시작하기">시작하기</string>
    <string name="카리나">카리나</string>
    <string name="잇섭">잇섭</string>
    <string name="황정음">황정음</string>
    <string name="진심으로_환영합니다">진심으로 환영합니다.</string>
    <string name="SoulFit이_준비한_신규회원_이벤트를_신청해보세요">SoulFit이 준비한 신규회원 이벤트를 신청해보세요.</string>
    <string name="첫_구독_이벤트_바로가기">첫 구독 이벤트 바로가기</string>
    <string name="원플러스원_구독_이벤트">1+1개월 구독 이벤트</string>
    <string name="모델_검색_무제한">모델 검색 무제한</string>
    <string name="모델_적합도_분석_무제한">모델 적합도 분석 무제한</string>
    <string name="AI_분석_기능">AI 분석 기능</string>
    <string name="을">을</string>
    <string name="무제한">무제한</string>
    <string name="으로_즐겨보세요">으로 즐겨보세요!</string>
    <string name="일주일_무료체험_후의_요금제를_선택하세요">일주일 무료체험 후의 요금제를 선택하세요.</string>
    <string name="인기">인기</string>
    <string name="삼십이퍼센트_할인">32% 할인</string>
    <string name="삼십만원">300,000원</string>
    <string name="구만팔천원">98,000원</string>
    <string name="팔천백육십칠원월">8,167원/월</string>
    <string name="만구천오백원월">19,500원/월</string>
    <string name="십이개월">12개월</string>
    <string name="일개월">1개월</string>
    <string name="상세_조건_확인하기">상세 조건 확인하기</string>
    <string name="일주일간_무료_체험_시작하기">일주일간 무료 체험 시작하기</string>
    <string name="회원가입">회원가입</string>
    <string name="기업_이메일">기업 이메일</string>
    <string name="이메일_주소_입력">이메일 주소 입력</string>
    <string name="인증번호">인증번호</string>
    <string name="인증번호_입력">인증번호 입력</string>
    <string name="인증번호_받기">인증번호 받기</string>
    <string name="비밀번호">비밀번호</string>
    <string name="비밀번호_입력">비밀번호 입력</string>
    <string name="SoulFit">SoulFit</string>
    <string name="이용약관">이용약관</string>
    <string name="본인은_기업_관계자이며_약관_내용을_확인하였습니다">본인은 기업 관계자이며, 약관 내용을 확인하였습니다.</string>
    <string name="궁금한_인플루언서를_검색해보세요">궁금한 인플루언서를 검색해보세요.</string>
    <string name="최근_검색어">최근 검색어</string>
    <string name="실시간_검색_순위">실시간 검색 순위</string>
    <string name="고윤정">고윤정</string>
    <string name="수지">수지</string>
    <string name="가수">가수</string>
    <string name="배우">배우</string>
    <string name="가수앤배우">가수&amp;배우</string>
    <string name="일">1</string>
    <string name="이">2</string>
    <string name="삼">3</string>
    <string name="사">4</string>
    <string name="오">5</string>
    <string name="이주빈">이주빈</string>
    <string name="전종서">전종서</string>
    <string name="지수">지수</string>
    <string name="input_start_title">AI 광고 모델 분석</string>
    <string name="input_start_script">기업 및 제품 정보, 광고전략, 목표타겟, 관심 셀럽을 입력하면 AI를 통해 적합도를 분석해드려요.</string>
    <string name="input_start_btn">시작하기</string>
    <string name="iv_3d_logo">분석 시작 화면에서 소울라이브의 3d 로고 이미지</string>
    <string name="광고하고자_하는">광고하고자 하는</string>
    <string name="제품">제품</string>
    <string name="에_대해_알려주세요">에 대해 알려주세요</string>
    <string name="기업_브랜드_제품_이미지에_적합한_광고_모델을_선별해_드려요">기업, 브랜드, 제품 이미지에 적합한\n광고 모델을 선별해 드려요.</string>
    <string name="기업">기업</string>
    <string name="기업명_입력">기업명 입력</string>
    <string name="next_btn">다음</string>
    <string name="브랜드">브랜드</string>
    <string name="브랜드명_입력">브랜드명 입력</string>
    <string name="상품">상품</string>
    <string name="상품명_입력">상품명 입력</string>
    <string name="전략에_대한">전략에 대한</string>
    <string name="세부정보">세부정보</string>
    <string name="를_제공해_주세요">를 제공해 주세요</string>
    <string name="AI를_통해_전략에_적합한_모델을_분석_및_추천해드려요">AI를 통해 전략에 적합한 모델을 분석 및 추천해드려요.</string>
    <string name="전략방향">전략방향</string>
    <string name="키워드_입력">키워드 입력</string>
    <string name="복수_입력_가능">복수 입력 가능</string>
    <string name="input_target_title1">목표하는</string>
    <string name="input_target_title2">타겟</string>
    <string name="input_target_title3">에 대해서 알려주세요</string>
    <string name="input_target_script">타겟층에 대한 영향력을 분석해드릴게요.</string>
    <string name="input_target_gender">성별</string>
    <string name="input_target_multi_choice">복수 선택 가능</string>
    <string name="target_gender_btn_man">남성</string>
    <string name="target_gender_btn_woman">여성</string>
    <string name="target_no_matter">상관없음</string>
    <string name="input_target_age">연령</string>
    <string name="target_age_btn_age0">10대 미만</string>
    <string name="target_age_btn_age10">10대</string>
    <string name="target_age_btn_age20">20대</string>
    <string name="target_age_btn_age30">30대</string>
    <string name="target_age_btn_age40">40대</string>
    <string name="target_age_btn_age50">50대</string>
    <string name="target_age_btn_age60">60대</string>
    <string name="btn_next">다음</string>
    <string name="input_search_title">관심있는</string>
    <string name="input_search_model">모델</string>
    <string name="input_search_title2">에 대해 알려주세요</string>
    <string name="input_search_script">입력받은 정보를 토대로</string>
    <string name="input_search_script2">선택한 모델의 적합도를 판단해드려요.</string>
    <string name="input_search_subscript">복수 선택 가능</string>
    <string name="input_search_placeholder">모델명 입력</string>
    <string name="input_search_selected_model">선택한 모델</string>
    <string name="cancel">취소</string>
    <string name="input_step5_title1">입력하신 정보를 바탕으로</string>
    <string name="input_step5_title2">모델의</string>
    <string name="input_step5_title3">적합도를</string>
    <string name="input_step5_title4">분석중입니다.</string>
    <string name="input_step5_btn">확인하기</string>
    <string name="iv_loading">분석화면의 로딩 이미지</string>
    <string name="input_step5_analyze">기업 및 제품 정보를 분석하고 있어요...</string>
    <string name="input_step5_waiting">조금만 기다려 주세요.</string>
    <string name="new_analyze_text">분석이 완료되었어요!</string>
    <string name="new_waiting_text">버튼을 눌러 분석 결과를 확인해주세요.</string>
    <string name="output_step1_title1">분석 결과</string>
    <string name="output_step1_title2">유사 모델 추천</string>
    <string name="output_step1_script">찾으신 모델 외에 적합한 모델을 찾아드릴게요.</string>
    <string name="output_step1_btn_retry">다시 입력하기</string>
    <string name="output_step1_change">조건 변경</string>
    <string name="output_step1_filter1">적합도순</string>
    <string name="output_step1_filter2">화제성순</string>
    <string name="output_step1_filter3">적합도</string>
    <string name="output_step1_filter4">타겟 선호도</string>
    <string name="output_step1_filter5">전략</string>
    <string-array name="output_filter_options">
        <item>적합도순</item>
        <item>화제성순</item>
        <item>광고비순</item>
    </string-array>
    <string name="output_search_subtitle">MY 전략에 맞는 인플루언서 검색</string>
    <string name="output_search_keyword1">프리미엄</string>
    <string name="output_search_keyword2">프리미엄라인인 S시리즈 강조</string>
    <string name="output_search_keyword3">새로 들어간 AI</string>
    <string name="output_search_keyword4">새로 들어간 AI통역 기능 각인</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="output_dialog_title">처음부터 다시 정보를 입력할까요?</string>
    <string name="output_dialog_script">Soulfit은 학습할수록 똑똑해져요!</string>
    <string name="output_dialog_btn1">아니요</string>
    <string name="output_dialog_btn2">좋아요</string>
    <string name="output_dialog_ticket">남은 분석권 1개</string>
    <string name="fitness_title1">어떤 모델이 광고에 적합한지</string>
    <string name="fitness_title2">고민이신가요?</string>
    <string name="tv_fitness_goto">AI 적합도 분석하러 가기</string>
    <string name="iv_qna">분석화면의 물음표 이미지</string>
    <string name="iv_fitness_btn">분석하기 버튼</string>
    <string name="iv_fitness_goto_logo">분석하기 버튼에 있는 분석 로딩 이미지</string>
    <string name="tv_fitness_history">과거 적합도 분석 히스토리</string>
    <string name="iv_fitness_history_box">과거 적합도 분석 히스토리 박스</string>
    <string name="tv_history1_title">Galaxy S30</string>
    <string name="tv_history1_date">2024.03.03</string>
    <string name="iv_fitness_history_mini_box">히스토리의 작은 상자</string>
    <string name="tv_fitness_history_age">연령</string>
    <string name="tv_fitness_history1_age_detail">40-60세</string>
    <string name="tv_fitness_history_gender">성별</string>
    <string name="tv_fitness_history1_gender_detail">무관</string>
    <string name="tv_fitness_history_model">모델</string>
    <string name="tv_fitness_history1_model_detail">황정음</string>
    <string name="tv_history2_title">iPhone 15</string>
    <string name="tv_history2_date">2024.03.06</string>
    <string name="tv_fitness_history2_age_detail">10-20세</string>
    <string name="tv_fitness_history2_gender_detail">무관</string>
    <string name="tv_fitness_history2_model_detail">뉴진스</string>
    <string name="iv_home_banner">홈 화면에 있는 3d로고</string>
    <string name="tv_home_title1">오늘도</string>
    <string name="tv_home_title2">SoulFit</string>
    <string name="tv_home_title3">과 함께</string>
    <string name="tv_home_title4">기업과 딱 맞는 모델을 찾아보세요!</string>
    <string name="tv_home_model">SOUL LIVE의 검증된 모델</string>
    <string name="tv_home_verified1_name">가전주부</string>
    <string name="tv_home_verified1_job">유튜버</string>
    <string name="tv_home_verified1_tag1">차분한 보이스</string>
    <string name="tv_home_verified1_tag2">라이프 스타일</string>
    <string name="tv_home_verified1_tag3">IT 제품</string>
    <string name="tv_home_verified2_name">손채리</string>
    <string name="tv_home_verified2_job">유튜버</string>
    <string name="tv_home_verified2_tag1">독보적인</string>
    <string name="tv_home_verified2_tag2">패션</string>
    <string name="tv_home_verified2_tag3">글로벌</string>
    <string name="tv_home_verified3_name">하루하루 문숙</string>
    <string name="tv_home_verified3_job">배우</string>
    <string name="tv_home_verified3_tag1">우아한</string>
    <string name="tv_home_verified3_tag2">자연 건강</string>
    <string name="tv_home_verified3_tag3">의식이 높은</string>
    <string name="tv_home_brand">브랜드 평판 순위</string>
    <string name="tv_home_brand1">광고 모델</string>
    <string name="tv_home_brand2">배우</string>
    <string name="tv_home_brand3">가수</string>
    <string name="tv_home_brand4">스포츠</string>
    <string name="tv_home_brand5">예능인</string>
    <string name="tv_home_brand6">개인방송</string>
    <string name="tv_home_rank1_name">임영웅</string>
    <string name="tv_home_rank2_name">뉴진스</string>
    <string name="tv_home_rank3_name">손흥민</string>
    <string name="tv_home_rank3_job">운동선수</string>
    <string name="tv_home_rank4_name">차은우</string>
    <string name="tv_home_rank_job_singer">가수</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tv_output_detail">상세 분석</string>
    <string name="download">다운로드 이미지</string>
    <string name="model_goyyonjung">고윤정</string>
    <string name="output_detail_model_tag1">묘한 매력이 있는</string>
    <string name="output_detail_model_tag2">럭셔리한</string>
    <string name="output_detail_model_tag3">세련된</string>
    <string name="tv_detail_view1_brand">브랜드 평판 지수</string>
    <string name="tv_detail_view1_brand_rank">11위</string>
    <string name="tv_detail_view1_brand_rank_num">3,749,215</string>
    <string name="tv_detail_reputation_script1">2024년 2월 배우 브랜드 평판지수로, 해당 모델은 브랜드 평판 지수</string>
    <string name="tv_detail_reputation_script2">3,749,215</string>
    <string name="tv_detail_reputation_script3">로 배우 중</string>
    <string name="tv_detail_reputation_script4">11위</string>
    <string name="tv_detail_reputation_script5">입니다.</string>
</resources>