<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_600">

    <ImageView
        android:id="@+id/iv_detail_reputation"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/iv_bg_grey800"
        android:src="@drawable/bg_grey800_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_tab2_reputation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/tv_detail_view1_brand"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/iv_detail_reputation"
        app:layout_constraintTop_toTopOf="@id/iv_detail_reputation" />

    <TextView
        android:id="@+id/tv_detail_reputation_script1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/tv_detail_reputation_script1"
        android:textColor="@color/grey_150"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/iv_detail_reputation"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_tab2_reputation" />

    <TextView
        android:id="@+id/tv_detail_reputation_script2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/tv_detail_reputation_script2"
        android:textColor="@color/purple_400"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/iv_detail_reputation"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_reputation_script1" />

    <TextView
        android:id="@+id/tv_detail_reputation_script3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/tv_detail_reputation_script3"
        android:textColor="@color/grey_150"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/tv_detail_reputation_script2"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_reputation_script1" />

    <TextView
        android:id="@+id/tv_detail_reputation_script4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/tv_detail_reputation_script4"
        android:textColor="@color/purple_400"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/tv_detail_reputation_script3"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_reputation_script1" />

    <TextView
        android:id="@+id/tv_detail_reputation_script5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/tv_detail_reputation_script5"
        android:textColor="@color/grey_150"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/tv_detail_reputation_script4"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_reputation_script1" />

    <ImageView
        android:id="@+id/iv_detail_tab2_brand"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/iv_bg_grey700"
        android:src="@drawable/bg_grey700_8dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_detail_reputation"
        app:layout_constraintEnd_toEndOf="@id/iv_detail_reputation"
        app:layout_constraintStart_toStartOf="@id/iv_detail_reputation"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_reputation_script2" />

    <TextView
        android:id="@+id/tv_detail_tab2_brand_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/tv_detail_view1_brand_rank"
        android:textColor="@color/purple_400"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/iv_detail_tab2_brand"
        app:layout_constraintStart_toStartOf="@id/iv_detail_tab2_brand"
        app:layout_constraintTop_toTopOf="@id/iv_detail_tab2_brand" />

    <TextView
        android:id="@+id/tv_detail_view1_brand_rank_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/tv_detail_view1_brand_rank_num"
        android:textColor="@color/purple_100"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_detail_tab2_brand"
        app:layout_constraintEnd_toEndOf="@id/iv_detail_tab2_brand"
        app:layout_constraintStart_toStartOf="@id/iv_detail_tab2_brand"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_tab2_brand_rank" />

</androidx.constraintlayout.widget.ConstraintLayout>