<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_popup"
    tools:context=".ui.event.SubscribeFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/subscribe_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left" />

    <TextView
        android:id="@+id/tv_subscribe_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/AI_분석_기능"
        android:textColor="@color/purple_100"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subscribe_toolbar" />

    <TextView
        android:id="@+id/tv_subscribe_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/을"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/tv_subscribe_title1"
        app:layout_constraintTop_toBottomOf="@id/subscribe_toolbar" />

    <TextView
        android:id="@+id/tv_subscribe_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/무제한"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subscribe_title1" />

    <TextView
        android:id="@+id/tv_event_popup_title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/으로_즐겨보세요"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/tv_subscribe_title3"
        app:layout_constraintTop_toBottomOf="@id/tv_subscribe_title1" />

    <TextView
        android:id="@+id/tv_on_boarding_script"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/일주일_무료체험_후의_요금제를_선택하세요"
        android:textColor="@color/grey_100"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subscribe_title3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subscribe1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/bg_btn_subscribe_selector"
        android:elevation="15dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_on_boarding_script">

        <TextView
            android:id="@+id/tv_subscribe1_keyword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_keyword"
            android:backgroundTint="@color/purple_400"
            android:fontFamily="@font/pretendard_medium"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            android:text="@string/인기"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subscribe1_keyword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_btn_keyword_border"
            android:fontFamily="@font/pretendard_medium"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            android:text="@string/삼십이퍼센트_할인"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/tv_subscribe1_keyword1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subscribe1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/십이개월"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subscribe1_keyword1" />

        <TextView
            android:id="@+id/tv_subscribe1_price1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/삼십만원"
            android:textColor="@color/grey_200"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subscribe1_price2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/구만팔천원"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_subscribe1_price3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subscribe1_price1" />

        <TextView
            android:id="@+id/tv_subscribe1_price3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/팔천백육십칠원월"
            android:textColor="@color/purple_50"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subscribe1_price2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subscribe2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_subscribe_selector"
        android:elevation="15dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subscribe1">

        <TextView
            android:id="@+id/tv_subscribe2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/일개월"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_subscribe2_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/만구천오백원월"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/상세_조건_확인하기"
        android:textColor="@color/grey_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subscribe2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_subscribe_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_input_btn_selector"
        android:fontFamily="@font/pretendard_medium"
        android:gravity="center"
        android:text="@string/btn_next"
        android:textColor="@color/btn_input_text_selector"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>