<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rounded"
    android:orientation="vertical"
    android:layout_marginHorizontal="30dp"
    android:padding="20dp">


    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/output_dialog_title"
        android:textColor="@color/white"
        android:textSize="20dp" />


    <TextView
        android:id="@+id/dialogScript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/output_dialog_script"
        android:textColor="@color/grey_150"
        android:textSize="12dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/output_closeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_dialog_btn_left"
            android:text="@string/output_dialog_btn1"
            android:textColor="@color/grey_150"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/output_navigateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_dialog_btn_right"
            android:text="@string/output_dialog_btn2"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="12sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/ticket_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/output_dialog_ticket"
        android:textColor="@color/grey_200"
        android:textSize="12sp" />
</LinearLayout>

