<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_900"
    tools:context=".ui.on_boarding.OnBoardingFragment">


    <TextView
        android:id="@+id/tv_on_boarding_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/모델_정하기_고민_끝"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_on_boarding_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/SoulFit"
        android:textColor="@color/purple_400"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_on_boarding_title1" />

    <TextView
        android:id="@+id/tv_on_boarding_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/에_오신_것을"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/tv_on_boarding_title2"
        app:layout_constraintTop_toBottomOf="@id/tv_on_boarding_title1" />

    <TextView
        android:id="@+id/tv_on_boarding_title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/환영합니다"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/tv_on_boarding_title2"
        app:layout_constraintTop_toBottomOf="@id/tv_on_boarding_title3" />

    <TextView
        android:id="@+id/tv_on_boarding_script"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/삼초_가입으로_적합한_모델을_만나보세요"
        android:textColor="@color/grey_150"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_on_boarding_title4" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_on_boarding_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="24dp"
        android:background="@drawable/bg_btn_target_next_selector"
        android:fontFamily="@font/pretendard_medium"
        android:gravity="center"
        android:text="@string/시작하기"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>